--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <p class="desc">Book & Enjoy</p>
             </li>
           </ul>
-          <img src="/assets/icon/Ellipse.png" class="ellipse" alt="Ellipse" />
+          <img src="./assets/icon/Ellipse.png" class="ellipse" alt="Ellipse" />
         </div>
       </section>
       <section class="section">
