--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
   <div class="wrapper">
     <section class="header">
       <div class="container wrap__cont">
-        <!-- <div class="header__column"> -->
         <h1 class="header__title">Bhromaon</h1>
         <p class="header__subtitle">Safe Travel Anywhere</p>
         <form action="get" target="blank" class="header__search">
           <input type="search" placeholder="Search Your Travel Destination" />
           <button type="submit">
-            Search
+            <p>Search</p>
             <div class="header__icon">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20px"
                 height="22px">
@@ -38,7 +37,6 @@
           <a href="#who">
             <div class="bg-scroll"></div>
           </a>
-          <!-- </div> -->
         </div>
       </div>
       <div class="header__navy_wrapper">
