--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         </div>
       </div>
     </section>
+
+    <div class="who-wrapper">
     <section id="who" class="who-choose-us">
       <div class="who-choose-us__row container">
         <div class="who-choose-us__item">
@@ -86,9 +88,8 @@
         </div>
       </div>
     </section>
-    <section class="how-it-works">
-      <div class="how-it-works__row container">
-        <ul class="how-it-works__pic">
+    <section class="how-it-works ">
+        <ul class="how-it-works__pic container">
           <li>
             <div class="bg-search_big"></div>
             <p class="desc">Search Places</p>
@@ -103,8 +104,9 @@
           </li>
         </ul>
         <img src="./assets/icon/Ellipse.png" class="ellipse" alt="Ellipse" />
-      </div>
     </section>
+    </div>
+
     <section class="section">
       <div class="section__block1">
         <div class="container row1">
