--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <p class="desc">Book & Enjoy</p>
           </li>
         </ul>
-        <img src="./assets/icon/Ellipse.png" class="ellipse" alt="Ellipse" />
+        <!-- <img src="./assets/icon/Ellipse.png" class="ellipse" alt="Ellipse" /> -->
     </section>
     </div>
 
